[package]
name = "rusmikan-kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusmikan = { path = ".." }
uefi = "0.16.0"
arrayvec = { version = "0.7.2", default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
