[package]
name = "rusmikan-kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusmikan = { path = ".." }
uefi = "0.16.0"
arrayvec = { version = "0.7.2", default-features = false }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.4"
x86_64 = "0.14.10"
bit_field = "0.10.1"
pc-keyboard = "0.5.1"
uart_16550 = "0.2.18"
rsdp = "2.0.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
